--- a/css/style.css
+++ b/css/style.css
@@ -183,3 +183,14 @@ a {
   font-size: 48px;
   line-height: 56px;
 }
+
+.chapter {
+  display: inline-block;
+  width: 483px;
+  height: 508px;
+  filter: drop-shadow(-3px 1px 20px #535353);
+}
+
+.chapter-1 {
+  background: url(../img/photo1.jpg) no-repeat center top;
+}
