--- a/css/style.css
+++ b/css/style.css
@@ -197,21 +197,27 @@ a {
   vertical-align: top;
   margin: 0 50px 50px 0;
   padding-top: 250px;
-  filter: drop-shadow(-3px 1px 20px #535353);
+  /* filter: drop-shadow(-3px 1px 20px #535353); */
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 .chapter-section__header {
-  margin-left: 100px;
-  margin-bottom: 25px;
+  margin-left: 50px;
+  /* margin-bottom: 25px; */
+  font-size: 36px;
+  line-height: 56px;
+  color: #2F1CE4;
 }
 
 .chapter-description__list {
-  margin-left: 100px;
+  margin-left: 50px;
   list-style: none;
 }
 
 .chapter-description__list-element {
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
+  font-size: 16px;
+  line-height: 30px;
 }
 
 .chapter-1 {
@@ -233,18 +239,22 @@ a {
 
 .chapter-number {
   position: absolute;
-  bottom: 0;
-  right: 0;
+  bottom: 14px;
+  right: 22px;
+  font-size: 48px;
+  font-style: italic;
+  line-height: 56px;
+  color: #EAEAEA;
 }
 
 .modules-button__more {
   display: block;
   margin: 0 auto;
   padding: 10px;
+  margin-top: 100px;
   color: #2f1ce4;
   border: 1px solid #2f1ce4;
   background: white;
-  margin-top: 30px;
 }
 
 .body-modules {
