--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,9 @@ a {
 
 .container-return {
   padding: 30px;
+  font-family: 'Gilroy', sans-serif;
+  font-size: 18px;
+  line-height: 56px;
   background: url(../img/return.png) no-repeat left center;
   background-size: 20px 20px;
 }
@@ -177,16 +180,16 @@ a {
 }
 
 .modules-header {
+  margin: 100px 0 90px 100px;
   font-family: 'Gilroy', sans-serif;
   font-weight: 800;
-  margin: 100px 0 90px 100px;
   font-size: 48px;
   line-height: 56px;
 }
 
 .chapters {
   margin-left: 100px;
-  margin-bottom: 350px;
+  margin-bottom: 450px;
 }
 
 .chapter {
@@ -195,17 +198,20 @@ a {
   width: 483px;
   min-height: 508px;
   vertical-align: top;
-  margin: 0 50px 50px 0;
+  margin-bottom: 50px;
   padding-top: 250px;
-  /* filter: drop-shadow(-3px 1px 20px #535353); */
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+.chapter:nth-of-type(odd) {
+  margin-right: 50px;
 }
 
 .chapter-section__header {
   margin-left: 50px;
-  /* margin-bottom: 25px; */
   font-size: 36px;
   line-height: 56px;
+  font-weight: 800;
   color: #2F1CE4;
 }
 
@@ -215,7 +221,7 @@ a {
 }
 
 .chapter-description__list-element {
-  /* margin-bottom: 20px; */
+  font-family: 'Gilroy', sans-serif;
   font-size: 16px;
   line-height: 30px;
 }
@@ -249,11 +255,13 @@ a {
 
 .modules-button__more {
   display: block;
-  margin: 0 auto;
-  padding: 10px;
-  margin-top: 100px;
+  margin: 100px auto 0;
+  padding: 10px 75px;
+  font-family: 'Gilroy', sans-serif;
+  size: 18px;
+  line-height: 56px;
   color: #2f1ce4;
-  border: 1px solid #2f1ce4;
+  border: 2px solid #2f1ce4;
   background: white;
 }
 
